# bestsource

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: build.yml  codespell.yml  linux.yml  macos.yml  release.yml  update-version.yml  windows.yml
msvc/: BestSource.sln  BestSource.vcxproj  BestSource.vcxproj.filters  BestVideoSource.sln  BestVideoSource.vcxproj  BestVideoSource.vcxproj.filters
src/: BSRational.cpp  BSRational.h  BSShared.cpp  BSShared.h  SrcAttribCache.cpp  SrcAttribCache.h  audiosource.cpp  audiosource.h  avisynth.cpp  bsshared.cpp  bsshared.h  synthshared.cpp  synthshared.h  tracklist.cpp  tracklist.h  vapoursynth.cpp  version.h  videosource.cpp  videosource.h
subprojects/: avisynthplus.wrap
