[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-bestsource"
description = "A super great audio/video source and FFmpeg wrapper"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Fredrik Mellbin", email = "fredrik.mellbin@gmail.com"},
]
keywords = ["source", "video", "audio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/vapoursynth/bestsource.git"
Issues = "https://github.com/vapoursynth/bestsource/issues"

[tool.meson-python.wheel]
exclude = ["*/*.dll.a"]
